--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/sinon": "^5.0.2",
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
+    "husky": "^1.2.1",
     "mocha": "^5.2.0",
     "nyc": "^13.1.0",
     "rimraf": "^2.6.2",
@@ -33,6 +34,11 @@
   "files": [
     "lib/"
   ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
+  },
   "nyc": {
     "check-coverage": true,
     "include": [
