--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "rimraf -rf lib",
     "test": "NODE_ENV=test nyc mocha test/*.spec.ts --exit --timeout 10000",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "devDependencies": {
     "@types/mocha": "^5.2.5",
